<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <view
                android:id="@+id/view"
                style="@style/moj_styl"
                class="com.example.acg.Elipse"
                android:contentDescription="@string/kolo" />

            <view
                android:id="@+id/view2"
                style="@style/moj_styl"
                class="com.example.acg.Elipse"
                android:contentDescription="@string/elipsa" />

            <view
                android:id="@+id/view3"
                style="@style/moj_styl"
                class="com.example.acg.Elipse"
                android:contentDescription="@string/prostokat" />

            <view
                android:id="@+id/view4"
                style="@style/moj_styl"
                class="com.example.acg.Elipse"
                android:contentDescription="@string/prostokat_okragly" />

            <view
                android:id="@+id/view5"
                style="@style/moj_styl"
                class="com.example.acg.Elipse"
                android:contentDescription="@string/luk" />

            <view
                android:id="@+id/view6"
                style="@style/moj_styl"
                class="com.example.acg.Elipse"
                android:contentDescription="@string/linia" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>